# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  08 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> portage_syntax.py: Inital
  commit. Refactors all of portage_versions.py and some functions from
  portage.py into a CPV class and an Atom class.

  08 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> ebuild-default-functions.sh
  emerge portageq portage.py portage_dep.py portage_exec.py portage_util.py
  portage_versions.py: Added Ludal's clean up patch. #69523

  05 Dec 2004; Brian Harring <ferringb@gentoo.org> tarball.sh: Yanked
  the script- A) it's specific to nicks setup, B) the tarball/release 
  creation functionality is already handled by the autotooling of portage
  (make dist), C) make dist does it better, and automatically handles
  pulling in all required deps as an ancillary function of it's building/installing,
  D) make dist requires no specific maintenance while tarball.sh does.

  05 Dec 2004; Brian Harring <ferringb@gentoo.org> pym/cache, pym/cache/template.py,
  pym/cache/fs_template.py, pym/cache/sql_template.py, pym/cache/flat_list.py, 
  pym/cache/anydbm.py, pym/cache/sqlite.py, pym/cache/cache_errors.py, 
  pym/cache/__init__.py:  Cache refactoring, not active in the code currently.
  All backends should work, although the code is not finished.  Locking support
  needs to be added into fs_template- possibly do it in the derived fsbased 
  backeends, since locking for flat_list is quite different from locking for 
  anydbm.

  05 Dec 2004; Nicholas Jones <carpaski@gentoo.org> pym/portage.py: swegener
  made quite a find in portdbapi.cpv_exists, the comparison on the tuple
  returned by findname2 always evaluated true.
